add directsam pseudo labelling

--- a/check_dataset.ipynb
+++ b/check_dataset.ipynb
@@ -59,11 +59,12 @@
     "        return probabilities\n",
     "\n",
     "\n",
-    "resolution = 1024\n",
+    "resolution = 1800\n",
     "thickness = 3\n",
     "\n",
     "model = DirectSAM(\n",
-    "    \"chendelong/DirectSAM-tiny-distilled-15ep-768px-0821\",\n",
+    "    \"chendelong/DirectSAM-1800px-0424\",\n",
+    "    # \"chendelong/DirectSAM-tiny-distilled-15ep-768px-0821\",\n",
     "    resolution, \n",
     "    device\n",
     "    )"
@@ -76,7 +77,8 @@
    "outputs": [],
    "source": [
     "# for dataset_name in ['ADE20k', 'EntitySeg', 'COCONut_relabeld_COCO_val', 'LoveDA', 'PascalPanopticParts', 'PartImageNet++']:\n",
-    "for dataset_name in ['EntitySeg']:\n",
+    "# for dataset_name in ['EntitySeg']:\n",
+    "for dataset_name in ['directsam_pseudo_label']:\n",
     "\n",
     "    dataset_config = dataset_configs[dataset_name]\n",
     "\n",
@@ -86,8 +88,11 @@
     "    print(dataset_name)\n",
     "    print(len(dataset))\n",
     "\n",
-    "    for i in range(5):\n",
-    "        sample = dataset[random.randint(0, len(dataset)-1)]\n",
+    "    all_probs = []\n",
+    "\n",
+    "    for i in tqdm.tqdm(range(10)):\n",
+    "        # sample = dataset[random.randint(0, len(dataset)-1)]\n",
+    "        sample = dataset[i]\n",
     "\n",
     "        if type(sample) == dict:\n",
     "            image = sample['image']\n",
@@ -109,8 +114,15 @@
     "\n",
     "        plt.subplot(1, 4, 4)\n",
     "        plt.imshow(prob > 0.5)\n",
+    "        plt.show()\n",
     "\n",
-    "        plt.show()"
+    "        all_probs.append(prob)\n",
+    "\n",
+    "    all_probs = np.array(all_probs)\n",
+    "    plt.hist(all_probs.flatten(), bins=100)\n",
+    "    # log scale\n",
+    "    plt.yscale('log')\n",
+    "    plt.show()"
    ]
   }
  ],
