--- a/check_dataset.ipynb
+++ b/check_dataset.ipynb
@@ -14,8 +14,14 @@
     "import pandas as pd\n",
     "import tqdm\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "from transformers import AutoModelForSemanticSegmentation, AutoImageProcessor\n",
+    "import torch.nn as nn\n",
+    "from model.directsam import DirectSAM\n",
+    "from evaluation.metrics import recall_with_tolerance\n",
     "\n",
-    "device = \"cuda:4\"\n",
+    "device = \"cuda:0\"\n",
     "\n",
     "from data.create_dataset import create_dataset\n",
     "\n",
@@ -29,43 +35,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "resolution = 1024\n",
+    "threshold = 0.3\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torch\n",
-    "from transformers import AutoModelForSemanticSegmentation, AutoImageProcessor\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "\n",
-    "class DirectSAM():\n",
-    "\n",
-    "    def __init__(self, model_name, resolution, device):\n",
-    "        self.model = AutoModelForSemanticSegmentation.from_pretrained(model_name).to(device).half().eval()\n",
-    "        self.processor = AutoImageProcessor.from_pretrained('chendelong/DirectSAM-1800px-0424')\n",
-    "\n",
-    "        self.processor.size['height'] = resolution\n",
-    "        self.processor.size['width'] = resolution\n",
-    "        self.resolution = resolution\n",
-    "\n",
-    "    def __call__(self, image):\n",
-    "        pixel_values = self.processor(image, return_tensors=\"pt\").pixel_values.to(self.model.device).to(self.model.dtype)\n",
-    "        logits = self.model(pixel_values=pixel_values).logits.float().cpu()\n",
-    "\n",
-    "        upsampled_logits = nn.functional.interpolate(\n",
-    "            logits,\n",
-    "            size=(self.resolution, self.resolution),\n",
-    "            mode=\"bicubic\",\n",
-    "        )\n",
-    "        probabilities = torch.sigmoid(upsampled_logits).detach().numpy()[0,0]\n",
-    "        return probabilities\n",
-    "\n",
-    "\n",
-    "resolution = 1800\n",
-    "thickness = 3\n",
+    "tolerance = resolution // 100 \n",
+    "tolerance += tolerance % 2 == 0\n",
     "\n",
     "model = DirectSAM(\n",
-    "    \"chendelong/DirectSAM-1800px-0424\",\n",
-    "    # \"chendelong/DirectSAM-tiny-distilled-15ep-768px-0821\",\n",
+    "    # \"chendelong/DirectSAM-1800px-0424\",\n",
+    "    \"/home/dchenbs/workspace/DirectSAM/runs/directsam_pseudo_label_merged/0829-1210-1024px-from-chendelong_DirectSAM-1800px-0424/checkpoint-6000\",\n",
     "    resolution, \n",
+    "    threshold,\n",
     "    device\n",
     "    )"
    ]
@@ -76,21 +56,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for dataset_name in ['ADE20k', 'EntitySeg', 'COCONut_relabeld_COCO_val', 'LoveDA', 'PascalPanopticParts', 'PartImageNet++']:\n",
-    "# for dataset_name in ['EntitySeg']:\n",
-    "for dataset_name in ['directsam_pseudo_label']:\n",
+    "import cv2\n",
+    "from torch.nn import functional as F\n",
+    "\n",
+    "\n",
+    "def compare_boundaries(target, prediction, tolerance, linewidth, brightness=192):\n",
+    "\n",
+    "    target_blured = cv2.GaussianBlur(target.astype(np.float32), (tolerance, tolerance), 0) > 0\n",
+    "    prediction_blured = cv2.GaussianBlur(prediction.astype(np.float32), (tolerance, tolerance), 0) > 0\n",
+    "\n",
+    "    gray = target * prediction_blured\n",
+    "    red = target * (prediction_blured == 0)\n",
+    "    blue = prediction * (target_blured == 0)\n",
+    "\n",
+    "    gray = cv2.GaussianBlur(gray.astype(np.float32), (linewidth, linewidth), 0) > 0\n",
+    "    red = cv2.GaussianBlur(red.astype(np.float32), (linewidth, linewidth), 0) > 0\n",
+    "    blue = cv2.GaussianBlur(blue.astype(np.float32), (linewidth, linewidth), 0) > 0\n",
+    "\n",
+    "    image = np.ones((target.shape[0], target.shape[1], 3)) * 255\n",
+    "    image[gray] = [brightness, brightness, brightness]\n",
+    "    image[red] = [brightness, 0, 0]\n",
+    "    image[blue] = [0, 0, brightness]\n",
+    "\n",
+    "    image[:tolerance, :, :] = image[-tolerance:, :, :] = image[:, :tolerance, :] = image[:, -tolerance:, :] = 255\n",
+    "\n",
+    "    return image.astype(np.uint8)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for dataset_name in ['GTA5', 'DRAM', 'SOBA', 'UDA-Part', 'SeginW', 'CIHP', 'Fashionpedia', 'PartIT', 'PascalPanopticParts', 'SPIN', 'PartImageNet++', 'ADE20k', 'EntitySeg', 'LoveDA', 'COCONut_relabeld_COCO_val', 'COCONut-s', 'COCONut-b', 'COCO2017', 'LVIS']:\n",
+    "for dataset_name in ['EntitySeg', 'PascalPanopticParts']:\n",
+    "# for dataset_name in ['directsam_pseudo_label_merged']:\n",
+    "# for dataset_name in ['COIFT', 'DIS5K-DIS-TR', 'DIS5K-DIS-VD', 'DUTS-TE', 'DUTS-TR', 'ecssd', 'fss_all', 'HRSOD', 'MSRA_10K', 'ThinObject5K']:\n",
+    "# for dataset_name in list(dataset_configs.keys()):\n",
     "\n",
     "    dataset_config = dataset_configs[dataset_name]\n",
     "\n",
-    "    dataset = create_dataset(dataset_config, split='validation', resolution=resolution, thickness=thickness)\n",
+    "    dataset = create_dataset(dataset_config, split='validation', resolution=resolution, thickness=2)\n",
     "\n",
     "    print(dataset_config)\n",
     "    print(dataset_name)\n",
     "    print(len(dataset))\n",
     "\n",
-    "    all_probs = []\n",
     "\n",
-    "    for i in tqdm.tqdm(range(10)):\n",
+    "    for i in tqdm.tqdm(range(5)):\n",
     "        # sample = dataset[random.randint(0, len(dataset)-1)]\n",
     "        sample = dataset[i]\n",
     "\n",
@@ -100,29 +115,35 @@
     "        else:\n",
     "            image, target = sample\n",
     "\n",
-    "        prob = model(image)\n",
+    "        prediction, num_tokens = model(image)\n",
+    "        recall = recall_with_tolerance(target, prediction, tolerance)\n",
     "\n",
-    "        plt.figure(figsize=(30, 6))\n",
-    "        plt.subplot(1, 4, 1)\n",
+    "        plt.figure(figsize=(20, 20))\n",
+    "        plt.subplot(2, 2, 1)\n",
     "        plt.imshow(image)\n",
+    "        plt.axis('off')\n",
+    "        plt.title('Input image')\n",
     "        \n",
-    "        plt.subplot(1, 4, 2)\n",
-    "        plt.imshow(target)\n",
+    "        plt.subplot(2, 2, 2)\n",
+    "        plt.imshow(compare_boundaries(target, prediction, tolerance=tolerance, linewidth=3))\n",
+    "        plt.title(f'Recall: {recall:.2f}')\n",
+    "        plt.axis('off')\n",
     "\n",
-    "        plt.subplot(1, 4, 3)\n",
-    "        plt.imshow(prob)\n",
+    "        plt.subplot(2, 2, 3)\n",
+    "        plt.imshow(target, cmap='Reds')\n",
+    "        plt.imshow(image, alpha=0.3)\n",
+    "        plt.axis('off')\n",
+    "        plt.title('Ground Truth Label')\n",
     "\n",
-    "        plt.subplot(1, 4, 4)\n",
-    "        plt.imshow(prob > 0.5)\n",
-    "        plt.show()\n",
     "\n",
-    "        all_probs.append(prob)\n",
+    "        plt.subplot(2, 2, 4)\n",
+    "        plt.imshow(prediction, cmap='Blues')\n",
+    "        plt.imshow(image, alpha=0.3)\n",
+    "        plt.title(f'DirectSAM Pseudo label ({num_tokens} tokens)')\n",
+    "        plt.axis('off')\n",
     "\n",
-    "    all_probs = np.array(all_probs)\n",
-    "    plt.hist(all_probs.flatten(), bins=100)\n",
-    "    # log scale\n",
-    "    plt.yscale('log')\n",
-    "    plt.show()"
+    "        plt.tight_layout()\n",
+    "        plt.show()"
    ]
   }
  ],
