update visualization and metric, add `image_paths` to training datasets

--- a/check_dataset.ipynb
+++ b/check_dataset.ipynb
@@ -6,8 +6,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
+    "from datasets import Dataset, load_dataset\n",
     "\n",
+    "# dataset = load_dataset('scene_parse_150', split='train')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import tqdm\n",
+    "\n",
+    "# image_folder = '/home/dchenbs/workspace/datasets/ADE20k/train'\n",
+    "# for i in tqdm.tqdm(range(len(dataset))):\n",
+    "#     image = dataset[i]['image']\n",
+    "#     image_path = f'{image_folder}/{i}.jpg'\n",
+    "\n",
+    "#     image.save(image_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import random\n",
@@ -20,13 +47,22 @@
     "import torch.nn as nn\n",
     "from model.directsam import DirectSAM\n",
     "from evaluation.metrics import recall_with_tolerance\n",
+    "from evaluation.visualization import compare_boundaries\n",
     "\n",
     "device = \"cuda:0\"\n",
     "\n",
     "from data.create_dataset import create_dataset\n",
     "\n",
     "dataset_configs = json.load(open('data/dataset_configs.json', 'r'))\n",
-    "print(dataset_configs.keys())"
+    "print(dataset_configs.keys())\n",
+    "\n",
+    "train_datasets = [\n",
+    "    'LIP', 'CelebA', 'SOBA', 'SeginW', 'CIHP', 'Fashionpedia', 'PascalPanopticParts', 'SPIN', 'PartImageNet++', 'ADE20k', 'EntitySeg', 'LoveDA', 'COCONut-s', 'COCONut-b', 'COCONut-l', 'PACO', 'LVIS', 'COIFT', 'DIS5K-DIS-TR', 'DUTS-TR', 'ecssd', 'fss_all', 'HRSOD', 'MSRA_10K', 'ThinObject5K'\n",
+    "    ]\n",
+    "\n",
+    "validataion_datases = [\n",
+    "    'LIP', 'DRAM', 'SOBA', 'SeginW', 'CIHP', 'Fashionpedia', 'PascalPanopticParts', 'SPIN', 'PartImageNet++', 'ADE20k', 'EntitySeg', 'LoveDA', 'COCONut_relabeld_COCO_val', 'PACO', 'LVIS', 'DIS5K-DIS-VD', 'DUTS-TE'\n",
+    "    ]"
    ]
   },
   {
@@ -43,7 +79,7 @@
     "\n",
     "model = DirectSAM(\n",
     "    # \"chendelong/DirectSAM-1800px-0424\",\n",
-    "    \"/home/dchenbs/workspace/DirectSAM/runs/directsam_pseudo_label_merged/0829-1210-1024px-from-chendelong_DirectSAM-1800px-0424/checkpoint-6000\",\n",
+    "    \"/home/dchenbs/workspace/DirectSAM/runs/directsam_pseudo_label_merged/0829-1210-1024px-from-chendelong_DirectSAM-1800px-0424/checkpoint-8000\",\n",
     "    resolution, \n",
     "    threshold,\n",
     "    device\n",
@@ -56,64 +92,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
-    "from torch.nn import functional as F\n",
-    "\n",
-    "\n",
-    "def compare_boundaries(target, prediction, tolerance, linewidth, brightness=192):\n",
-    "\n",
-    "    target_blured = cv2.GaussianBlur(target.astype(np.float32), (tolerance, tolerance), 0) > 0\n",
-    "    prediction_blured = cv2.GaussianBlur(prediction.astype(np.float32), (tolerance, tolerance), 0) > 0\n",
-    "\n",
-    "    gray = target * prediction_blured\n",
-    "    red = target * (prediction_blured == 0)\n",
-    "    blue = prediction * (target_blured == 0)\n",
-    "\n",
-    "    gray = cv2.GaussianBlur(gray.astype(np.float32), (linewidth, linewidth), 0) > 0\n",
-    "    red = cv2.GaussianBlur(red.astype(np.float32), (linewidth, linewidth), 0) > 0\n",
-    "    blue = cv2.GaussianBlur(blue.astype(np.float32), (linewidth, linewidth), 0) > 0\n",
-    "\n",
-    "    image = np.ones((target.shape[0], target.shape[1], 3)) * 255\n",
-    "    image[gray] = [brightness, brightness, brightness]\n",
-    "    image[red] = [brightness, 0, 0]\n",
-    "    image[blue] = [0, 0, brightness]\n",
-    "\n",
-    "    image[:tolerance, :, :] = image[-tolerance:, :, :] = image[:, :tolerance, :] = image[:, -tolerance:, :] = 255\n",
-    "\n",
-    "    return image.astype(np.uint8)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for dataset_name in ['GTA5', 'DRAM', 'SOBA', 'UDA-Part', 'SeginW', 'CIHP', 'Fashionpedia', 'PartIT', 'PascalPanopticParts', 'SPIN', 'PartImageNet++', 'ADE20k', 'EntitySeg', 'LoveDA', 'COCONut_relabeld_COCO_val', 'COCONut-s', 'COCONut-b', 'COCO2017', 'LVIS']:\n",
-    "for dataset_name in ['EntitySeg', 'PascalPanopticParts']:\n",
-    "# for dataset_name in ['directsam_pseudo_label_merged']:\n",
-    "# for dataset_name in ['COIFT', 'DIS5K-DIS-TR', 'DIS5K-DIS-VD', 'DUTS-TE', 'DUTS-TR', 'ecssd', 'fss_all', 'HRSOD', 'MSRA_10K', 'ThinObject5K']:\n",
+    "for dataset_name in ['ADE20k']:\n",
+    "# for dataset_name in train_datasets: \n",
     "# for dataset_name in list(dataset_configs.keys()):\n",
     "\n",
     "    dataset_config = dataset_configs[dataset_name]\n",
     "\n",
-    "    dataset = create_dataset(dataset_config, split='validation', resolution=resolution, thickness=2)\n",
+    "    dataset = create_dataset(dataset_config, split='train', resolution=resolution, thickness=2)\n",
     "\n",
     "    print(dataset_config)\n",
     "    print(dataset_name)\n",
     "    print(len(dataset))\n",
     "\n",
-    "\n",
-    "    for i in tqdm.tqdm(range(5)):\n",
+    "    \n",
+    "    for i in tqdm.tqdm(range(10)):\n",
     "        # sample = dataset[random.randint(0, len(dataset)-1)]\n",
     "        sample = dataset[i]\n",
+    "\n",
+    "        # ADE20k not ready\n",
+    "        image_path = dataset.image_paths[i]\n",
+    "        image = Image.open(image_path)\n",
+    "        print(image_path, image.size)\n",
     "\n",
     "        if type(sample) == dict:\n",
     "            image = sample['image']\n",
     "            target = sample['label']\n",
     "        else:\n",
     "            image, target = sample\n",
+    "\n",
     "\n",
     "        prediction, num_tokens = model(image)\n",
     "        recall = recall_with_tolerance(target, prediction, tolerance)\n",
