add pseudo labeling and annotation merging

--- a/check_dataset.ipynb
+++ b/check_dataset.ipynb
@@ -6,33 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import Dataset, load_dataset\n",
-    "\n",
-    "# dataset = load_dataset('scene_parse_150', split='train')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import tqdm\n",
-    "\n",
-    "# image_folder = '/home/dchenbs/workspace/datasets/ADE20k/train'\n",
-    "# for i in tqdm.tqdm(range(len(dataset))):\n",
-    "#     image = dataset[i]['image']\n",
-    "#     image_path = f'{image_folder}/{i}.jpg'\n",
-    "\n",
-    "#     image.save(image_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import json\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
@@ -48,6 +21,7 @@
     "from model.directsam import DirectSAM\n",
     "from evaluation.metrics import recall_with_tolerance\n",
     "from evaluation.visualization import compare_boundaries\n",
+    "import cv2\n",
     "\n",
     "device = \"cuda:0\"\n",
     "\n",
@@ -71,16 +45,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resolution = 1024\n",
+    "inference_resolution = 1800\n",
+    "evaluation_resolution = 768\n",
     "threshold = 0.3\n",
     "\n",
-    "tolerance = resolution // 100 \n",
+    "tolerance = inference_resolution // 100 \n",
     "tolerance += tolerance % 2 == 0\n",
     "\n",
     "model = DirectSAM(\n",
-    "    # \"chendelong/DirectSAM-1800px-0424\",\n",
-    "    \"/home/dchenbs/workspace/DirectSAM/runs/directsam_pseudo_label_merged/0829-1210-1024px-from-chendelong_DirectSAM-1800px-0424/checkpoint-8000\",\n",
-    "    resolution, \n",
+    "    \"chendelong/DirectSAM-1800px-0424\",\n",
+    "    # \"/home/dchenbs/workspace/DirectSAM/runs/directsa_plus/0902-0103-1700px-from-chendelong_DirectSAM-1800px-0424/checkpoint-4000\",\n",
+    "    inference_resolution, \n",
     "    threshold,\n",
     "    device\n",
     "    )"
@@ -92,27 +67,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for dataset_name in ['ADE20k']:\n",
+    "for dataset_name in ['directsa_plus']:\n",
+    "# for dataset_name in ['directsam_pseudo_label']:\n",
+    "# for dataset_name in ['COCONut-l']:\n",
     "# for dataset_name in train_datasets: \n",
     "# for dataset_name in list(dataset_configs.keys()):\n",
     "\n",
     "    dataset_config = dataset_configs[dataset_name]\n",
     "\n",
-    "    dataset = create_dataset(dataset_config, split='train', resolution=resolution, thickness=2)\n",
+    "    dataset = create_dataset(dataset_config, split='validation', resolution=evaluation_resolution, thickness=3)\n",
     "\n",
     "    print(dataset_config)\n",
     "    print(dataset_name)\n",
     "    print(len(dataset))\n",
     "\n",
+    "    all_tokens = []\n",
+    "    all_recall = []\n",
     "    \n",
     "    for i in tqdm.tqdm(range(10)):\n",
-    "        # sample = dataset[random.randint(0, len(dataset)-1)]\n",
-    "        sample = dataset[i]\n",
+    "        sample = dataset[random.randint(0, len(dataset)-1)]\n",
+    "        # sample = dataset[i]\n",
     "\n",
-    "        # ADE20k not ready\n",
-    "        image_path = dataset.image_paths[i]\n",
-    "        image = Image.open(image_path)\n",
-    "        print(image_path, image.size)\n",
+    "        # image_path = dataset.image_paths[i]\n",
+    "        # image = Image.open(image_path)\n",
+    "        # print(image_path, image.size)\n",
     "\n",
     "        if type(sample) == dict:\n",
     "            image = sample['image']\n",
@@ -120,11 +98,12 @@
     "        else:\n",
     "            image, target = sample\n",
     "\n",
-    "\n",
-    "        prediction, num_tokens = model(image)\n",
+    "        prediction, num_tokens = model(image, post_processing=True)\n",
+    "        prediction = cv2.resize(prediction.astype(np.float32), (evaluation_resolution, evaluation_resolution), interpolation=cv2.INTER_NEAREST).astype(np.uint8)\n",
     "        recall = recall_with_tolerance(target, prediction, tolerance)\n",
+    "        print(f\"Recall: {recall:.4f}\\tNumber of tokens: {num_tokens}\")\n",
     "\n",
-    "        plt.figure(figsize=(20, 20))\n",
+    "        plt.figure(figsize=(15, 15))\n",
     "        plt.subplot(2, 2, 1)\n",
     "        plt.imshow(image)\n",
     "        plt.axis('off')\n",
@@ -149,7 +128,13 @@
     "        plt.axis('off')\n",
     "\n",
     "        plt.tight_layout()\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "\n",
+    "        all_tokens.append(num_tokens)\n",
+    "        all_recall.append(recall)\n",
+    "\n",
+    "    print(f\"Average number of tokens: {np.mean(all_tokens):.2f}\")\n",
+    "    print(f\"Average recall: {np.mean(all_recall):.4f}\")"
    ]
   }
  ],
