update token-recall eval notebook

--- a/evaluation/token_recall_plot.ipynb
+++ b/evaluation/token_recall_plot.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "sns.set_theme(style=\"whitegrid\")\n",
     "\n",
     "result_dir = '/home/dchenbs/workspace/DirectSAM/outputs/eval_token_recall'\n",
     "datasets = os.listdir(result_dir)\n",
@@ -44,9 +45,32 @@
    "outputs": [],
    "source": [
     "for dataset in datasets:\n",
-    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.figure(figsize=(40, 20))\n",
     "    print(dataset)\n",
-    "    for model, model_results in results[dataset].items():\n",
+    "    models = list(results[dataset].keys())\n",
+    "    models.sort()\n",
+    "    for model in models:\n",
+    "        print(model)\n",
+    "\n",
+    "    models = [\n",
+    "        # '0902-1855-1024px-from-nvidia_segformer-b0-finetuned-cityscapes-1024-1024-checkpoint-10000', \n",
+    "        # '0902-1855-1024px-from-nvidia_segformer-b0-finetuned-cityscapes-1024-1024-checkpoint-100000', \n",
+    "        # '0902-1855-1024px-from-nvidia_segformer-b0-finetuned-cityscapes-1024-1024-checkpoint-150000', \n",
+    "        # '0902-1855-1024px-from-nvidia_segformer-b0-finetuned-cityscapes-1024-1024-checkpoint-30000', \n",
+    "        # '0902-1855-1024px-from-nvidia_segformer-b0-finetuned-cityscapes-1024-1024-checkpoint-50000', \n",
+    "        # '0906-0953-1024px-from-chendelong_DirectSAM-tiny-distilled-30ep-1024px-0906-checkpoint-40000', \n",
+    "\n",
+    "        'chendelong-DirectSAM-1800px-0424', \n",
+    "        'chendelong-DirectSAM-tiny-distilled-30ep-1024px-0906',\n",
+    "        # 'chendelong-DirectSAM-tiny-distilled-30ep-plus-30ep-1024px-0907',\n",
+    "        'chendelong-DirectSAM-tiny-distilled-30ep-plus-50ep-1024px-0910',\n",
+    "        # '0910-2233-1024px-from-nvidia_segformer-b0-finetuned-cityscapes-1024-1024-checkpoint-160000',\n",
+    "        # 'chendelong-DirectSAM-tiny-distilled-70ep-1024px-0920',\n",
+    "        ]\n",
+    "\n",
+    "    # for model, model_results in results[dataset].items():\n",
+    "    for model in models:\n",
+    "        model_results = results[dataset][model]\n",
     "        thresholds = list(model_results.keys())\n",
     "        thresholds.sort()\n",
     "        print(f'\\t{model}:\\t{thresholds}')\n",
