--- a/debug_dataset.ipynb
+++ b/debug_dataset.ipynb
@@ -11,8 +11,9 @@
     "import numpy as np\n",
     "import os\n",
     "import json\n",
+    "import cv2\n",
     "\n",
-    "from data_.create_dataset import create_dataset\n",
+    "from data.create_dataset import create_dataset\n",
     "\n",
     "dataset_configs = json.load(open('data/dataset_configs.json', 'r'))\n",
     "print(dataset_configs.keys())"
@@ -24,20 +25,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from model.directsam import DirectSAM\n",
+    "\n",
+    "# model = DirectSAM(\n",
+    "#     \"chendelong/DirectSAM-1800px-0424\",\n",
+    "#     resolution=1800,\n",
+    "#     device='cuda'\n",
+    "#     )\n",
+    "\n",
+    "model = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_colored_label_map(label_map, image):\n",
+    "    \n",
+    "    image = np.array(image)\n",
+    "    canvas = np.zeros((label_map.shape[0], label_map.shape[1], 3))\n",
+    "\n",
+    "    for label_id in np.unique(label_map):\n",
+    "        mask = label_map == label_id\n",
+    "        canvas[mask] = np.mean(image[mask], axis=0)\n",
+    "\n",
+    "    canvas = np.clip(canvas * 1.1, 0, 255)\n",
+    "    return canvas.astype(np.uint8) \n",
+    "\n",
+    "def visualize_image_with_contour(contour, image):\n",
+    "\n",
+    "    image = np.array(image)\n",
+    "    image[contour] = [255, 255, 255]\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "\n",
-    "keys = ['Fashionpedia']\n",
+    "keys = ['DSA_merged']\n",
     "\n",
     "for key in keys:\n",
     "    config = dataset_configs[key]\n",
-    "    for split in ['train', 'validation']:\n",
+    "    for split in ['train']:# , 'validation']:\n",
     "\n",
-    "        dataset = create_dataset(config, split, 768, thickness=5)\n",
+    "        dataset = create_dataset(config, split, 1800, thickness=9)\n",
     "\n",
     "        print(key, split, len(dataset), len(dataset.image_paths))\n",
     "        print(config)\n",
+    "        print(f'\\t\"{key}\" # {len(dataset)}')\n",
     "\n",
-    "        for index in range(3):\n",
+    "        for index in range(10):\n",
     "            index = random.randint(0, len(dataset)-1)\n",
     "            sample = dataset[index]\n",
     "\n",
@@ -45,19 +89,46 @@
     "            label = sample['label']\n",
     "            label_map = sample['label_map']\n",
     "\n",
-    "            image_path = dataset.image_paths[index]\n",
-    "            assert os.path.exists(image_path)\n",
+    "            if config['type'] != 'DSA':\n",
+    "                image_path = dataset.image_paths[index]\n",
+    "                assert os.path.exists(image_path)\n",
     "\n",
-    "            plt.figure(figsize=(30, 10))\n",
-    "            plt.subplot(1, 3, 1)\n",
-    "            plt.imshow(image)\n",
+    "            plt.figure(figsize=(24, 6))\n",
     "\n",
-    "            plt.subplot(1, 3, 2)\n",
-    "            plt.imshow(label_map)\n",
+    "            plt.subplot(1, 4, 1)\n",
+    "            plt.title('Label Map')\n",
+    "            plt.imshow(visualize_colored_label_map(label_map, image))\n",
+    "            plt.axis('off')\n",
     "\n",
-    "            plt.subplot(1, 3, 3)\n",
-    "            plt.imshow(label, cmap='Blues')\n",
-    "            plt.imshow(image, alpha=0.4)\n",
+    "            plt.subplot(1, 4, 2)\n",
+    "            plt.title('Label Contour')\n",
+    "            plt.imshow(visualize_image_with_contour(label, image))\n",
+    "            plt.axis('off')\n",
+    "\n",
+    "            if model is None:\n",
+    "                plt.subplot(1, 4, 3)\n",
+    "                plt.title('Label')\n",
+    "                plt.imshow(label, cmap='Greens', alpha=0.5)\n",
+    "                plt.axis('off')\n",
+    "            else:\n",
+    "\n",
+    "                probs = model(image)\n",
+    "\n",
+    "                plt.subplot(1, 4, 3)\n",
+    "                plt.title('Label and Pseudo Label')\n",
+    "                pseudo_label = probs > 0.5\n",
+    "                pseudo_label = cv2.resize(pseudo_label.astype(np.uint8), (label.shape[1], label.shape[0]), interpolation=cv2.INTER_NEAREST)\n",
+    "\n",
+    "                plt.imshow(pseudo_label, cmap='Reds')\n",
+    "                plt.imshow(label, cmap='Greens', alpha=0.5)\n",
+    "                plt.axis('off')\n",
+    "\n",
+    "                plt.subplot(1, 4, 4)\n",
+    "                plt.title('DirectSAM Probabilities')\n",
+    "                plt.imshow(probs, cmap='Reds')\n",
+    "                plt.axis('off')\n",
+    "\n",
+    "\n",
     "\n",
     "            plt.show()"
    ]
