add more huggingface datasets

--- a/debug_dataset.ipynb
+++ b/debug_dataset.ipynb
@@ -12,6 +12,7 @@
     "import os\n",
     "import json\n",
     "import cv2\n",
+    "import tqdm\n",
     "\n",
     "from data.create_dataset import create_dataset\n",
     "\n",
@@ -56,9 +57,9 @@
     "\n",
     "def visualize_image_with_contour(contour, image):\n",
     "\n",
-    "    image = np.array(image)\n",
+    "    image = np.array(image) * 0.6\n",
     "    image[contour] = [255, 255, 255]\n",
-    "    return image"
+    "    return image.astype(np.uint8)"
    ]
   },
   {
@@ -68,8 +69,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "keys = ['DSA_merged']\n",
+    "\n",
+    "# keys = ['SA1B', 'ADE20k', 'COCONut-s', 'COCONut-b', 'COCONut-l', 'LIP', 'CelebA', 'SOBA', 'CIHP', 'LoveDA', 'EntitySeg', 'PascalPanopticParts', 'SPIN', 'SUIM', 'MyFood', 'COIFT', 'DIS5K-DIS-TR','DUTS-TR', 'ecssd', 'fss_all', 'HRSOD', 'MSRA_10K', 'ThinObject5K', 'Fashionpedia', 'PartImageNetPP', 'SeginW', 'LVIS', 'PACO', 'GTA5']\n",
     "\n",
     "for key in keys:\n",
     "    config = dataset_configs[key]\n",
@@ -81,7 +83,7 @@
     "        print(config)\n",
     "        print(f'\\t\"{key}\" # {len(dataset)}')\n",
     "\n",
-    "        for index in range(10):\n",
+    "        for index in range(5):\n",
     "            index = random.randint(0, len(dataset)-1)\n",
     "            sample = dataset[index]\n",
     "\n",
@@ -89,11 +91,11 @@
     "            label = sample['label']\n",
     "            label_map = sample['label_map']\n",
     "\n",
-    "            if config['type'] != 'DSA':\n",
-    "                image_path = dataset.image_paths[index]\n",
-    "                assert os.path.exists(image_path)\n",
+    "            # if config['type'] != 'DSA':\n",
+    "            #     image_path = dataset.image_paths[index]\n",
+    "            #     assert os.path.exists(image_path)\n",
     "\n",
-    "            plt.figure(figsize=(24, 6))\n",
+    "            plt.figure(figsize=(20, 5))\n",
     "\n",
     "            plt.subplot(1, 4, 1)\n",
     "            plt.title('Label Map')\n",
@@ -128,7 +130,7 @@
     "                plt.imshow(probs, cmap='Reds')\n",
     "                plt.axis('off')\n",
     "\n",
-    "\n",
+    "            plt.tight_layout()\n",
     "\n",
     "            plt.show()"
    ]
