--- a/debug_dataset.ipynb
+++ b/debug_dataset.ipynb
@@ -26,16 +26,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model.directsam import DirectSAM\n",
+    "# from model.directsam import DirectSAM\n",
     "\n",
-    "model = DirectSAM(\n",
-    "    # \"chendelong/DirectSAM-1800px-0424\",\n",
-    "    '/home/dchenbs/workspace/DirectSAM/runs/DSA_merged/1004-1425-1024px-from-chendelong_DirectSAM-1800px-0424/checkpoint-5000',\n",
-    "    resolution=1024,\n",
-    "    device='cuda'\n",
-    "    )\n",
+    "# model = DirectSAM(\n",
+    "#     # \"chendelong/DirectSAM-1800px-0424\",\n",
+    "#     '/home/dchenbs/workspace/DirectSAM/runs/DSA_merged/1004-1425-1024px-from-chendelong_DirectSAM-1800px-0424/checkpoint-5000',\n",
+    "#     resolution=1024,\n",
+    "#     device='cuda'\n",
+    "#     )\n",
     "\n",
-    "# model = None"
+    "model = None"
    ]
   },
   {
@@ -71,15 +71,16 @@
    "source": [
     "\n",
     "keys = ['DSA_merged']\n",
+    "# keys = ['OpenEarthMap']\n",
     "# keys = ['ADE20k', 'EntitySeg', 'COCONut_relabeld_COCO_val', 'LoveDA']\n",
     "\n",
     "# keys = ['SA1B', 'ADE20k', 'COCONut-s', 'COCONut-b', 'COCONut-l', 'LIP', 'CelebA', 'SOBA', 'CIHP', 'LoveDA', 'EntitySeg', 'PascalPanopticParts', 'SPIN', 'SUIM', 'MyFood', 'COIFT', 'DIS5K-DIS-TR','DUTS-TR', 'ecssd', 'fss_all', 'HRSOD', 'MSRA_10K', 'ThinObject5K', 'Fashionpedia', 'PartImageNetPP', 'SeginW', 'LVIS', 'PACO', 'GTA5']\n",
     "\n",
     "for key in keys:\n",
     "    config = dataset_configs[key]\n",
-    "    for split in ['validation']:# , 'validation']:\n",
+    "    for split in ['train']:# 'train', 'validation'\n",
     "\n",
-    "        dataset = create_dataset(config, split, 1024, thickness=9)\n",
+    "        dataset = create_dataset(config, split, 1700, thickness=9)\n",
     "\n",
     "        print(key, split, len(dataset), len(dataset.image_paths))\n",
     "        print(config)\n",
