--- a/debug_dataset.ipynb
+++ b/debug_dataset.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "\n",
     "# keys = ['DSA_merged']\n",
-    "keys = ['WireFrame']\n",
+    "keys = ['ISAID']\n",
     "# keys = ['ADE20k', 'EntitySeg', 'COCONut_relabeld_COCO_val', 'LoveDA']\n",
     "\n",
     "# keys = ['SA1B', 'ADE20k', 'COCONut-s', 'COCONut-b', 'COCONut-l', 'LIP', 'CelebA', 'SOBA', 'CIHP', 'LoveDA', 'EntitySeg', 'PascalPanopticParts', 'SPIN', 'SUIM', 'MyFood', 'COIFT', 'DIS5K-DIS-TR','DUTS-TR', 'ecssd', 'fss_all', 'HRSOD', 'MSRA_10K', 'ThinObject5K', 'Fashionpedia', 'PartImageNetPP', 'SeginW', 'LVIS', 'PACO', 'GTA5']\n",
@@ -80,14 +80,14 @@
     "    config = dataset_configs[key]\n",
     "    for split in ['train']:# 'train', 'validation'\n",
     "\n",
-    "        dataset = create_dataset(config, split, 1700, thickness=9)\n",
+    "        dataset = create_dataset(config, split, 1024, thickness=5)\n",
     "\n",
     "        print(key, split, len(dataset), len(dataset.image_paths))\n",
     "        print(config)\n",
     "        print(f'\\t\"{key}\" # {len(dataset)}')\n",
     "\n",
-    "        for index in range(5):\n",
-    "            # index = random.randint(0, len(dataset)-1)\n",
+    "        for index in range(3):\n",
+    "            index = random.randint(0, len(dataset)-1)\n",
     "            sample = dataset[index]\n",
     "\n",
     "            image = sample['image']\n",
