add MapillaryMetropolis dataset

--- a/debug_dataset.ipynb
+++ b/debug_dataset.ipynb
@@ -70,8 +70,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "# keys = ['DSA_merged']\n",
-    "keys = ['ISAID']\n",
+    "keys = ['DSA_merged']\n",
+    "# keys = ['MapillaryMetropolis']\n",
     "# keys = ['ADE20k', 'EntitySeg', 'COCONut_relabeld_COCO_val', 'LoveDA']\n",
     "\n",
     "# keys = ['SA1B', 'ADE20k', 'COCONut-s', 'COCONut-b', 'COCONut-l', 'LIP', 'CelebA', 'SOBA', 'CIHP', 'LoveDA', 'EntitySeg', 'PascalPanopticParts', 'SPIN', 'SUIM', 'MyFood', 'COIFT', 'DIS5K-DIS-TR','DUTS-TR', 'ecssd', 'fss_all', 'HRSOD', 'MSRA_10K', 'ThinObject5K', 'Fashionpedia', 'PartImageNetPP', 'SeginW', 'LVIS', 'PACO', 'GTA5']\n",
@@ -114,6 +114,11 @@
     "                plt.subplot(1, 4, 3)\n",
     "                plt.title('Label')\n",
     "                plt.imshow(label, cmap='Greens', alpha=0.5)\n",
+    "                plt.axis('off')\n",
+    "\n",
+    "                plt.subplot(1, 4, 4)\n",
+    "                plt.title('Image')\n",
+    "                plt.imshow(image)\n",
     "                plt.axis('off')\n",
     "            else:\n",
     "\n",
