--- a/evaluation/token_recall_plot.ipynb
+++ b/evaluation/token_recall_plot.ipynb
@@ -54,8 +54,8 @@
     "\n",
     "    models = [\n",
     "        'chendelong-DirectSAM-1800px-0424', \n",
-    "        '1004-1425-1024px-from-chendelong_DirectSAM-1800px-0424-checkpoint-5000',\n",
-    "        '1004-1425-1024px-from-chendelong_DirectSAM-1800px-0424-checkpoint-10000',\n",
+    "        '1006-2038-1024px-from-chendelong_DirectSAM-1800px-0424-checkpoint-2000',\n",
+    "        # '1004-1425-1024px-from-chendelong_DirectSAM-1800px-0424-checkpoint-10000',\n",
     "        ]\n",
     "\n",
     "    # for model, model_results in results[dataset].items():\n",
