update debug dataset visualization

--- a/debug_dataset.ipynb
+++ b/debug_dataset.ipynb
@@ -31,9 +31,9 @@
     "\n",
     "model = DirectSAM(\n",
     "    # \"chendelong/DirectSAM-1800px-0424\",\n",
-    "    '/home/dchenbs/workspace/DirectSAM/runs/DSA_merged/1004-1425-1024px-from-chendelong_DirectSAM-1800px-0424/checkpoint-5000',\n",
+    "    '/home/dchenbs/workspace/DirectSAM/runs/DSA_merged/1006-2038-1024px-from-chendelong_DirectSAM-1800px-0424/checkpoint-20000',\n",
     "    resolution=1024,\n",
-    "    device='cuda:4'\n",
+    "    device='cuda:1'\n",
     "    )\n",
     "\n",
     "# model = None"
@@ -62,7 +62,8 @@
     "\n",
     "    image = np.array(image) * 0.6\n",
     "    image[contour] = [255, 255, 255]\n",
-    "    return image.astype(np.uint8)"
+    "    return image.astype(np.uint8)\n",
+    "\n"
    ]
   },
   {
@@ -72,18 +73,18 @@
    "outputs": [],
    "source": [
     "\n",
-    "keys = ['cityscapes']\n",
-    "# keys = ['MapillaryMetropolis']\n",
+    "# keys = ['ADE20k']\n",
+    "keys = ['DSA_merged']\n",
     "# keys = ['ADE20k', 'EntitySeg', 'COCONut_relabeld_COCO_val', 'LoveDA']\n",
     "\n",
-    "# keys = ['DSA_merged', 'SA1B_contour', 'SA1B', 'SA1B_116', 'MapillaryMetropolis', 'cityscapes', 'plantorgans', 'NYUDepthv2', 'VegAnn', 'tcd', 'sidewalk', 'FoodSeg103', 'ADE20k', 'COCONut_relabeld_COCO_val', 'COCONut-s', 'COCONut-b', 'COCONut-l', 'WireFrame', 'ISAID', 'OpenEarthMap', 'TreeCount', 'PhenoBench', 'EgoHOS', 'UAVID', 'LIP', 'CelebA', 'SOBA', 'CIHP', 'LoveDA', 'EntitySeg', 'PascalPanopticParts', 'SPIN', 'SUIM', 'MyFood', 'COIFT', 'DIS5K-DIS-TR', 'DIS5K-DIS-VD', 'DUTS-TE', 'DUTS-TR', 'ecssd', 'fss_all', 'HRSOD', 'MSRA_10K', 'ThinObject5K', 'Fashionpedia', 'PartImageNetPP', 'SeginW', 'LVIS', 'PACO', 'GTA5', 'COCO2017', 'DRAM', 'UDA-Part', 'PartIT', 'directsam_pseudo_label', 'directsam_pseudo_label_legacy', 'directsam_pseudo_label_merged', 'directsam_pseudo_label_merged_denoised', 'directsa_plus']\n",
+    "# keys = ['DSA_merged', 'SA1B_contour', 'SA1B', 'SA1B_116', 'MapillaryMetropolis', 'cityscapes', 'plantorgans', 'NYUDepthv2', 'VegAnn', 'tcd', 'sidewalk', 'FoodSeg103', 'ADE20k', 'COCONut_relabeld_COCO_val', 'COCONut-s', 'COCONut-b', 'COCONut-l', 'WireFrame', 'ISAID', 'OpenEarthMap', 'TreeCount', 'PhenoBench', 'EgoHOS', 'UAVID', 'LIP', 'CelebA', 'SOBA', 'CIHP', 'LoveDA', 'EntitySeg', 'PascalPanopticParts', 'SPIN', 'SUIM', 'MyFood', 'COIFT', 'DIS5K-DIS-TR', 'DIS5K-DIS-VD', 'DUTS-TE', 'DUTS-TR', 'ecssd', 'fss_all', 'HRSOD', 'MSRA_10K', 'ThinObject5K', 'Fashionpedia', 'PartImageNetPP', 'SeginW', 'LVIS', 'PACO', 'GTA5', 'COCO2017', 'DRAM']\n",
     "\n",
     "\n",
     "for key in keys:\n",
     "    config = dataset_configs[key]\n",
-    "    for split in ['validation']:# 'train', 'validation'\n",
+    "    for split in ['train']:# 'train', 'validation'\n",
     "\n",
-    "        dataset = create_dataset(config, split, 1024, thickness=5)\n",
+    "        dataset = create_dataset(config, split, 1024, thickness=9)\n",
     "\n",
     "        print(key, split, len(dataset), len(dataset.image_paths))\n",
     "        print(config)\n",
@@ -97,18 +98,17 @@
     "            target_contour = sample['label']\n",
     "            label_map = sample['label_map']\n",
     "\n",
-    "            # if config['type'] != 'DSA':\n",
-    "            #     image_path = dataset.image_paths[index]\n",
-    "            #     assert os.path.exists(image_path)\n",
+    "            if config['type'] == 'DSA':\n",
+    "                num_objects, label_map = cv2.connectedComponents(1-label_map.astype(np.uint8))\n",
     "\n",
     "            plt.figure(figsize=(25, 15))\n",
     "\n",
-    "            plt.subplot(1, 4, 1)\n",
+    "            plt.subplot(1, 5, 1)\n",
     "            plt.title('Image')\n",
     "            plt.imshow(image)\n",
     "            plt.axis('off')\n",
     "\n",
-    "            plt.subplot(1, 4, 2)\n",
+    "            plt.subplot(1, 5, 2)\n",
     "            plt.title('Label')\n",
     "            plt.imshow(visualize_colored_label_map_with_contour(target_contour, label_map, image))\n",
     "            plt.axis('off')\n",
@@ -118,8 +118,8 @@
     "\n",
     "                probs = model(image)\n",
     "\n",
-    "                plt.subplot(1, 4, 3)\n",
-    "                plt.title('Label and Pseudo Label')\n",
+    "                plt.subplot(1, 5, 3)\n",
+    "                plt.title('Label and DirectSAM Label')\n",
     "                pseudo_label = probs > 0.5\n",
     "                pseudo_label = cv2.resize(pseudo_label.astype(np.uint8), (target_contour.shape[1], target_contour.shape[0]), interpolation=cv2.INTER_NEAREST)\n",
     "\n",
@@ -127,11 +127,19 @@
     "                plt.imshow(target_contour, cmap='Greens', alpha=0.5)\n",
     "                plt.axis('off')\n",
     "\n",
-    "                plt.subplot(1, 4, 4)\n",
+    "                num_objects, pseudo_label_map = cv2.connectedComponents(1-pseudo_label)\n",
+    "                plt.subplot(1, 5, 4)\n",
+    "                plt.title(f'DirectSAM Label Map ({num_objects}) tokens')\n",
+    "                plt.imshow(visualize_colored_label_map_with_contour(pseudo_label > 0, pseudo_label_map, image))\n",
+    "                plt.axis('off')\n",
+    "\n",
+    "                plt.subplot(1, 5, 5)\n",
     "                plt.title('DirectSAM Probabilities')\n",
-    "                plt.imshow((np.array(image) * 0.5).astype(np.uint8))\n",
+    "                plt.imshow((np.array(image) * 0.2).astype(np.uint8))\n",
     "                plt.imshow(np.ones_like(probs), alpha=probs, cmap='binary')\n",
     "                plt.axis('off')\n",
+    "\n",
+    "\n",
     "\n",
     "            plt.tight_layout()\n",
     "            plt.show()"
