add pseudo labeling on DSA (gen1)

--- a/debug_dataset.ipynb
+++ b/debug_dataset.ipynb
@@ -29,14 +29,14 @@
    "source": [
     "from model.directsam import DirectSAM\n",
     "\n",
-    "model = DirectSAM(\n",
-    "    # \"chendelong/DirectSAM-1800px-0424\",\n",
-    "    '/home/dchenbs/workspace/DirectSAM/runs/DSA_merged/1006-2038-1024px-from-chendelong_DirectSAM-1800px-0424/checkpoint-20000',\n",
-    "    resolution=1024,\n",
-    "    device='cuda:1'\n",
-    "    )\n",
+    "# model = DirectSAM(\n",
+    "#     # \"chendelong/DirectSAM-1800px-0424\",\n",
+    "#     '/home/dchenbs/workspace/DirectSAM/runs/DSA_merged/1006-2038-1024px-from-chendelong_DirectSAM-1800px-0424/checkpoint-20000',\n",
+    "#     resolution=1024,\n",
+    "#     device='cuda:1'\n",
+    "#     )\n",
     "\n",
-    "# model = None"
+    "model = None"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "source": [
     "\n",
     "# keys = ['ADE20k']\n",
-    "keys = ['DSA_merged']\n",
+    "keys = ['DSA_gen1']\n",
     "# keys = ['ADE20k', 'EntitySeg', 'COCONut_relabeld_COCO_val', 'LoveDA']\n",
     "\n",
     "# keys = ['DSA_merged', 'SA1B_contour', 'SA1B', 'SA1B_116', 'MapillaryMetropolis', 'cityscapes', 'plantorgans', 'NYUDepthv2', 'VegAnn', 'tcd', 'sidewalk', 'FoodSeg103', 'ADE20k', 'COCONut_relabeld_COCO_val', 'COCONut-s', 'COCONut-b', 'COCONut-l', 'WireFrame', 'ISAID', 'OpenEarthMap', 'TreeCount', 'PhenoBench', 'EgoHOS', 'UAVID', 'LIP', 'CelebA', 'SOBA', 'CIHP', 'LoveDA', 'EntitySeg', 'PascalPanopticParts', 'SPIN', 'SUIM', 'MyFood', 'COIFT', 'DIS5K-DIS-TR', 'DIS5K-DIS-VD', 'DUTS-TE', 'DUTS-TR', 'ecssd', 'fss_all', 'HRSOD', 'MSRA_10K', 'ThinObject5K', 'Fashionpedia', 'PartImageNetPP', 'SeginW', 'LVIS', 'PACO', 'GTA5', 'COCO2017', 'DRAM']\n",
@@ -84,7 +84,7 @@
     "    config = dataset_configs[key]\n",
     "    for split in ['train']:# 'train', 'validation'\n",
     "\n",
-    "        dataset = create_dataset(config, split, 1024, thickness=9)\n",
+    "        dataset = create_dataset(config, split, 1024, thickness=5)\n",
     "\n",
     "        print(key, split, len(dataset), len(dataset.image_paths))\n",
     "        print(config)\n",
@@ -138,7 +138,6 @@
     "                plt.imshow((np.array(image) * 0.2).astype(np.uint8))\n",
     "                plt.imshow(np.ones_like(probs), alpha=probs, cmap='binary')\n",
     "                plt.axis('off')\n",
-    "\n",
     "\n",
     "\n",
     "            plt.tight_layout()\n",
