--- a/evaluation/token_recall_plot.ipynb
+++ b/evaluation/token_recall_plot.ipynb
@@ -11,7 +11,7 @@
     "import seaborn as sns\n",
     "sns.set_theme(style=\"whitegrid\")\n",
     "\n",
-    "result_dir = '/home/dchenbs/workspace/DirectSAM/outputs/eval_token_recall'\n",
+    "result_dir = '/home/dchenbs/workspace/DirectSAM/outputs/effective_boundary_recall'\n",
     "datasets = os.listdir(result_dir)\n",
     "\n",
     "results = {}\n",
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "for dataset in datasets:\n",
-    "    plt.figure(figsize=(40, 20))\n",
+    "    plt.figure(figsize=(20, 10))\n",
     "    print(dataset)\n",
     "    models = list(results[dataset].keys())\n",
     "    models.sort()\n",
@@ -54,8 +54,6 @@
     "\n",
     "    models = [\n",
     "        'chendelong-DirectSAM-1800px-0424', \n",
-    "        '1006-2038-1024px-from-chendelong_DirectSAM-1800px-0424-checkpoint-2000',\n",
-    "        # '1004-1425-1024px-from-chendelong_DirectSAM-1800px-0424-checkpoint-10000',\n",
     "        ]\n",
     "\n",
     "    # for model, model_results in results[dataset].items():\n",
@@ -72,7 +70,7 @@
     "        plt.scatter(tokens, recalls)\n",
     "\n",
     "        for i, txt in enumerate(thresholds):\n",
-    "            plt.annotate(txt, (tokens[i], recalls[i]))\n",
+    "            plt.annotate(f'.{int(recalls[i]*1000)} ({txt})', (tokens[i]-2, recalls[i]+0.003), fontsize=10)\n",
     "\n",
     "        plt.xlabel('Num Tokens')\n",
     "        plt.ylabel('Recall')\n",
@@ -98,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
