torch-based sa1b mask to contour

--- a/evaluation/token_recall_plot.ipynb
+++ b/evaluation/token_recall_plot.ipynb
@@ -54,6 +54,7 @@
     "\n",
     "    models = [\n",
     "        'chendelong-DirectSAM-1800px-0424', \n",
+    "        'chendelong-DirectSAM-gen1-1024px-1008'\n",
     "        ]\n",
     "\n",
     "    # for model, model_results in results[dataset].items():\n",
