add dsa-gen2 and update notebooks

--- a/debug_dataset.ipynb
+++ b/debug_dataset.ipynb
@@ -29,14 +29,15 @@
    "source": [
     "from model.directsam import DirectSAM\n",
     "\n",
-    "# model = DirectSAM(\n",
-    "#     # \"chendelong/DirectSAM-1800px-0424\",\n",
-    "#     '/home/dchenbs/workspace/DirectSAM/runs/DSA_merged/1006-2038-1024px-from-chendelong_DirectSAM-1800px-0424/checkpoint-20000',\n",
-    "#     resolution=1024,\n",
-    "#     device='cuda:1'\n",
-    "#     )\n",
+    "model = DirectSAM(\n",
+    "    # \"chendelong/DirectSAM-1800px-0424\",\n",
+    "    # 'chendelong/DirectSAM-gen2-1024px-1014',\n",
+    "    \"chendelong/DirectSAM-b0-1024px-sa1b-2ep-1017\",\n",
+    "    resolution=1024,\n",
+    "    device='cuda:1'\n",
+    "    )\n",
     "\n",
-    "model = None"
+    "# model = None"
    ]
   },
   {
@@ -74,7 +75,7 @@
    "source": [
     "\n",
     "# keys = ['ADE20k']\n",
-    "keys = ['SA1B_contour']\n",
+    "keys = ['DSA_gen2']\n",
     "# keys = ['ADE20k', 'EntitySeg', 'COCONut_relabeld_COCO_val', 'LoveDA']\n",
     "\n",
     "# keys = ['DSA_merged', 'SA1B_contour', 'SA1B', 'SA1B_116', 'MapillaryMetropolis', 'cityscapes', 'plantorgans', 'NYUDepthv2', 'VegAnn', 'tcd', 'sidewalk', 'FoodSeg103', 'ADE20k', 'COCONut_relabeld_COCO_val', 'COCONut-s', 'COCONut-b', 'COCONut-l', 'WireFrame', 'ISAID', 'OpenEarthMap', 'TreeCount', 'PhenoBench', 'EgoHOS', 'UAVID', 'LIP', 'CelebA', 'SOBA', 'CIHP', 'LoveDA', 'EntitySeg', 'PascalPanopticParts', 'SPIN', 'SUIM', 'MyFood', 'COIFT', 'DIS5K-DIS-TR', 'DIS5K-DIS-VD', 'DUTS-TE', 'DUTS-TR', 'ecssd', 'fss_all', 'HRSOD', 'MSRA_10K', 'ThinObject5K', 'Fashionpedia', 'PartImageNetPP', 'SeginW', 'LVIS', 'PACO', 'GTA5', 'COCO2017', 'DRAM']\n",
@@ -90,9 +91,11 @@
     "        print(config)\n",
     "        print(f'\\t\"{key}\" # {len(dataset)}')\n",
     "\n",
-    "        for index in range(5):\n",
+    "        for index in range(3):\n",
     "            index = random.randint(0, len(dataset)-1)\n",
-    "            sample = dataset[index]\n",
+    "            # sample = dataset[index]\n",
+    "\n",
+    "            sample = dataset.getitem(index, visualize_labels=True)\n",
     "\n",
     "            image = sample['image']\n",
     "            target_contour = sample['label']\n",
@@ -120,7 +123,7 @@
     "\n",
     "                plt.subplot(1, 5, 3)\n",
     "                plt.title('Label and DirectSAM Label')\n",
-    "                pseudo_label = probs > 0.5\n",
+    "                pseudo_label = probs > 0.1\n",
     "                pseudo_label = cv2.resize(pseudo_label.astype(np.uint8), (target_contour.shape[1], target_contour.shape[0]), interpolation=cv2.INTER_NEAREST)\n",
     "\n",
     "                plt.imshow(pseudo_label, cmap='Reds')\n",
