update contour denoiser, wrapped into a class

--- a/debug_contour_denoiser.ipynb
+++ b/debug_contour_denoiser.ipynb
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "device = \"cuda\"\n"
+    "device = \"cuda\""
    ]
   },
   {
@@ -24,13 +24,10 @@
    "source": [
     "from data.create_dataset import create_dataset\n",
     "\n",
-    "dataset_configs = json.load(open('data/dataset_configs.json', 'r'))\n",
-    "print(dataset_configs.keys())\n",
-    "# dataset_config = dataset_configs['directsa_plus']\n",
-    "# dataset_config = dataset_configs['directsam_pseudo_label_merged']\n",
-    "dataset_config = dataset_configs['directsam_pseudo_label_merged_denoised']\n",
-    "# dataset_config = dataset_configs['COCONut-b']\n",
-    "dataset = create_dataset(dataset_config, split='train', resolution=768, thickness=3)"
+    "dataset_config = json.load(open('data/dataset_configs.json', 'r'))['DSA_gen2']\n",
+    "print(dataset_config)\n",
+    "\n",
+    "dataset = create_dataset(dataset_config, 'train', 1024, thickness=5)\n"
    ]
   },
   {
@@ -39,19 +36,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model.contour_denoiser import contour_denoising\n",
+    "from model.contour_denoiser import ContourDenoiser\n",
     "\n",
-    "for i in tqdm.tqdm(range(10)):\n",
+    "denoiser = ContourDenoiser(max_tokens=256, area_threshold=100, device='cuda', radius=3)\n",
+    "\n",
+    "\n",
+    "for i in tqdm.tqdm(range(3)):\n",
     "    # sample = dataset[i]\n",
     "    sample = dataset[random.randint(0, len(dataset)-1)]\n",
     "\n",
-    "    if type(sample) == dict:\n",
-    "        image = sample['image']\n",
-    "        target = sample['label']\n",
-    "    else:\n",
-    "        image, target = sample\n",
+    "    image = sample['image']\n",
+    "    target = sample['label']\n",
     "\n",
-    "    denoised_target = contour_denoising(target, device, skip_merging=4, radius=2, area_ratio=1/1000)\n",
+    "    denoised_target = denoiser.contour_denoising(target)\n",
     "\n",
     "    plt.figure(figsize=(25, 10))\n",
     "    plt.subplot(1, 3, 1)\n",
